# web-dev-rust-book

./: Cargo.toml  README.md  SUMMARY.md  appendix.md  bibliografia.md  book.md  book.properties  book.toml
book/: 404.html  index.html  print.html
book/intro/: 1-about.html  3-book.html
book/part-1/: 00-capa.html  01-ping-pong.html  04-serving.html  05-auth.html  06-middleware.html  08-conclusao.html
docs/: 0-capa.html  404.html  appendix.html  bibliografia.html  index.html  print.html  searchindex.js  searchindex.json
docs/intro/: 1-about.html  2-Audience.html  3-book.html  4-setup.html  5-exercício.html
docs/part-1/: 00-capa.html  01-ping-pong.html  02-create.html  03-get.html  04-serving.html  05-auth.html  06-middleware.html  07-ci.html  08-conclusao.html
docs/part-2/: 00-capa.html  01-ping-gql.html  02-bestprices.html  03-recommendations.html  04-redis.html
docs/part-3/: 00-capa.html  01-setup.html  02-iniciando.html  03-best-prices.html  04-recommendations.html  05-route.html
intro/: 1-about.md  2-Audience.md  3-book.md  4-setup.md  5-exercício.md
part-1/: 00-capa.md  01-ping-pong.md  02-create.md  03-get.md  04-serving.md  05-auth.md  06-middleware.md  07-ci.md  08-conclusao.md
part-2/: 00-capa.md  01-ping-gql.md  02-bestprices.md  03-recommendations.md  04-redis.md
part-3/: 00-capa.md  01-setup.md  02-iniciando.md  03-best-prices.md  04-best-prices.md  04-recommendations.md  05-route.md
src/: 0-capa.md  SUMMARY.md  appendix.md  bibliografia.md
src/intro/: 1-about.md  2-Audience.md  3-book.md  4-setup.md  5-exercício.md
(+21 files in other folders)
